app/assets/stylesheets/main.css.scss
// Global styles for the slide-in nav & other effects
body {
	width: auto;
	height: auto;
	
	&.navIn {
		position: relative;
        overflow: hidden;
	}
}

.viewport {
	width: 100%;
	height: auto;
	
	&.navIn {
	    position: absolute;
	}
}

// #Main Body Content
#main {
	margin-top:1px;
	
	.homepage-top {
		border-bottom:1px solid $grayLighter;
		margin-bottom:$baseline;
	}
	.homepage-bottom { margin:0; padding: 0;}
	
	.events-forum {
		border-left:1px solid $grayLighter;
		padding-left: 20px;
		h4 {
			@include font-headline;
			@include font-shorthand(600, 15px, $baseLineHeight);
			a { color: $nearBlack; }
			text-transform: none; // for elements with the cbase class
		}
	}
	
	.homepage-lead {
		&.lead-right {
			// Make the first headline bigger in lead-right scheme
			.offleads .span4:first-child .offlead h3.story-headline { @include font-shorthand(bold, 28px, 26px); }
			.lead h1 { @include font-shorthand(600, 24px); }
		}
	}
}

// Trending Bar
.trending {
	border-bottom:1px solid $grayLighter;
	margin-bottom:$baseline;
	padding:4px;
	h6 {
		@include ie-inline-block();
		float:left;
		font-size:13px;
		font-weight:normal;
		line-height:$baseLineHeight * 1.5;
		margin-right:10px;
	}
	ul li {
		@include nav-horiz();
		a {
			color:$grayDark;
			@include font-sans-serif(normal, 12px, 18px);
		}
	}
}

// Broadcast Bar
.broadcast-bar {
	border-top:1px solid $grayBorder;
	border-bottom:1px solid $grayBorder;
	margin-bottom: 25px;
	
	&.with-headshot { 
		margin-top: 15px; // So the host isn't wearing the nav as a tophat
		.program.current .program-info { margin-left: 100px; } // Push the show title link over since we have to absolutely-position the headshot
	}
	
	.bb-inner-container {
		background:$grayBackground;
		border-top:1px solid $white;
		border-bottom:1px solid $white;
		height: 46px;
		display: table; // so the BB extends downwards when the text wraps
		width: 100%;
		
		.sections { display: table; width: 100%;}
	}
	
	a.headshot {
		position: absolute; // Since we have to push it up a bit to extend above the bar, and we don't want any extra space below
		bottom: 0;
		width: 90px;
		height: 70px;
		&:hover { text-decoration: none; }
	}
	
	.program-info {
		a.show-title {
			@include font-heading($weight: 600, $size: 22px);
			text-shadow:1px 1px 0px #fff;
			color:$orangeDark;
			margin-right: 5px; // Leave space for the show time
		}
		
		.show-time {
			@include font-sans-serif($weight:normal, $size:12px);
			color:$gray;
			letter-spacing:-0.15em;
			white-space: nowrap; // Don't want the time getting split up onto different lines
		}
	}
	
	.section {
		display: table-cell;
		width: 50%;
		vertical-align: middle;
		height: 46px;

		.program {
			padding-left: 70px; // Room for the status badge
			background-position: 0 0;
			background-repeat: no-repeat;
			
			&.current {
				float: left;
				background-image: url(image_path("broadcast-bar/onair.png"));
				a.modal-toggler {
					background:url(image_path('broadcast-bar/episode-arrow-invitation.png')) no-repeat right 10px;
					padding-right:15px;
					&:hover {
						background-position:right -34px;
					}
				}
			}
	
			&.next {
				float: right;
				background-image: url(image_path("broadcast-bar/upnext.png"));
			}
		}
	}
	
}

.episode-guide {
	@include font-sans-serif($weight:100, $size:14px);
	color:$grayAlt;
	img {
		float:left;
		width:58px;
		height:58px;
	}
	ul.cbase {
		li {
			display:block;
			list-style-image:url(image_path('mega-divider.png'));
			margin-bottom:$baseline / 2;
			&.lead {
				list-style-image:none;
			}
			&.more {
				margin-bottom:0;
				a {
					background:url(image_path('broadcast-bar/episode-more-icon.png')) no-repeat right 1px;
					font-size:11px;
					padding-bottom:2px;
					padding-right:17px;
				}
			}
			a.comment_link {
				margin-left:0;
			}
		}
		margin-left:80px;
		h4 {
			font-size:18px;
			font-weight:bold;
		}
		h5 {
			font-size:15px;
		}
		p {
			color:$nearBlack;
			font-size:13px;
			line-height:18px;
		}
		.headline {
			@include font-headline(600);
			a {
				color:$nearBlack;
				}
			a.comment_link {
				color:$linkColor;
			}
		}
	}
}

.offleads {
	.span4:last-child .offlead {
		border-bottom: none;
	}
	.offlead {
		padding: 0 0 5px 0;
		margin: 0 0 5px 0;
		border-bottom: 1px solid $grayLighter;
	}
}
// Join Conversation
.join-conversation-container {
	margin:10px 0;
	
	&.home {
		border-top: 1px solid $grayLighter;
		border-bottom: 1px solid $grayLighter;
	}
	
	.join_conversation {
		background-color:$grayBackground;

		h6 {
			color:$black;
			padding:5px 0 0 10px;	
		}
		blockquote {
			@include font-serif($size:16px, $lineHeight:25px);
			background:url("join-conversation-blockquote.png") no-repeat scroll 2% 50% transparent;		
			border:0 none;
			font-style:italic;
			margin:5px 0 0 0;
			min-height:33px;
			padding:0 25px 0 55px;
		}
		p.quotee {
			@include font-sans-serif($size:12px);
			color:$grayLight;
			padding:5px 25px 10px 55px;
			margin: 0;
			a {
				color:$gray;
			}
		}
	}
}

// More Headlines
.headlines {
	ul {
		list-style-image:url("more-headlines-li.png");
		li {
			margin:5px 0 0 -10px;
			a {
				@include font-headline($weight:lighter);
				color:$grayAlt;
				font-size:15px;
			}
		}
	}
}

p.more a {
	color:$grayAlt;
	@include font-sans-serif(bold, 11px);
	padding:0;
	margin: 0;
	text-transform:uppercase;
	&:hover { text-decoration:underline; }
}

// Cbase H3 - Applies styling to first headline - activated by jQuery
.first-headline {
	font-size:30px;
	line-height:30px;
}

// More News
h6.more-news-title {
	background:url("section-headline-background.png") repeat-x 0 0;
	@include font-shorthand($weight: bold, $size: 18px, $lineHeight: 35px);
	color:$grayAlt;
	padding-left:8px;
	text-transform:none;
	margin-bottom: 10px;
}

.more-link {
	@include font-sans-serif($size:12px);
	float:right;
	padding: 7px 8px 0 0;
}

.more-news-container {
	border-right:1px solid $grayLighter;
	padding-right: 10px;
	.more-news {
		padding-bottom: $baseLineHeight / 2;
		.more-news-content {
			padding-right:5px;
			border-right:1px solid $grayLighter;
			.offlead { /* cbase offlead reset */ 
				border-bottom: none;
				margin-bottom: 0;
			}
			p.story-title {
				@include font-headline($weight:bold);
				font-size:16px;
				margin:0;
				a {
					color:$grayAlt;
				}
			}
			p.story-content {
				@include font-shorthand($size: 13px, $lineHeight: 18px);
				padding:10px 0 0 0;
			}
			ul {
			    margin: 0;
				list-style: none inside url("more-headlines-li.png");
				li {
					margin:5px 0 0 0;
					a {
						@include font-headline($weight:lighter);
						color:$grayAlt;
						font-size:15px;
					}
				}
			}
		}
		div.related-content {			
			h6 {
				@include font-shorthand(bold, 13px, $baseLineHeight);
				padding:5px 0;
			}
			img.segment {
				padding:10px 0 0 0;
			}
			span.caption {
				@include font-headline($weight:lighter);
				color:$grayAlt;
				display:block;
				font-size:15px;
				a {
					color:$grayAlt;
				}
			}
			blockquote {
				@include font-headline($weight: lighter);
				@include font-shorthand($size: 16px, $lineHeight: 23px);
				border:0 none;
				font-style:italic;
				margin:10px 0 5px 0;
				padding:0;
				word-wrap: break-word; // Big text, small area, best to force-break a word if necessary
			}
			.comments-quotee {
				@include font-sans-serif($size: 12px);
				background:url("more-news-quotee-icon.png") no-repeat 100px top;
				color:$grayLight;
				height:35px;
				padding:20px 0 0 20px;
			}
		}
	}
}




// Filters bar (please move this to a more appropriate file)
nav.filters {
	background: #f5f5f5;
	border-top: 1px solid #bfbfbf;
	border-bottom: 1px solid #bfbfbf;
	margin: 10px 0;
	padding: 10px;
	@include font-heading($size: 12px, $weight: 600);
	text-transform: uppercase;
	ul { margin:0; }
	li {
		float:left;
		list-style-type:none;
		margin-right:3%;
		&:last-child { margin: 0; }
		&.heading {
			color:#575757;
			margin-right:20px;
			text-transform:none;
		}
		a {
			@include border-radius(3px);
			color: #2e2e2e;
			font-weight:600;
			padding: 3px 5px;
			&:hover, &.active {
				background-color: $gray;
				color: $nearWhite;
				text-shadow: 0 1px #000;
				text-decoration: none;
			}
			&:hover {
				background-color: #9c9c9c;
			}
		}
	}
}

// Error
#error {
	form {
		margin: 10px 0;

		input { display: inline-block; }
		input[type=text] {
			max-width:450px;
			width:100%;
			font-size:15px;
			padding:5px;			
		}
	}
}

